apex-trigger-handler/main/default/objects/TriggerHandlerRegistry__mdt/TriggerHandlerRegistry__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Handler Registry</label>
    <pluralLabel>Trigger Handler Registry</pluralLabel>
</CustomObject>