apex-trigger-handler/main/default/objects/TriggerHandlerRegistry__mdt/fields/HandlerClass__c.field-meta.xml
<CustomField>
    <fullName>HandlerClass__c</fullName>
    <label>Handler Class</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>