apex-trigger-handler/main/default/objects/TriggerHandlerRegistry__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>