apex-trigger-handler/main/default/objects/TriggerHandlerRegistry__mdt/fields/TriggerEvent__c.field-meta.xml
<CustomField>
    <fullName>TriggerEvent__c</fullName>
    <label>Trigger Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANY_EVENT</fullName>
                <default>true</default>
                <label>Any Event</label>
            </value>
            <value>
                <fullName>BEFORE_INSERT</fullName>
                <label>Before Insert</label>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
                <label>After Insert</label>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
                <label>Before Update</label>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
                <label>After Update</label>
            </value>
            <value>
                <fullName>BEFORE_DELETE</fullName>
                <label>Before Delete</label>
            </value>
            <value>
                <fullName>AFTER_DELETE</fullName>
                <label>After Delete</label>
            </value>
            <value>
                <fullName>AFTER_UNDELETE</fullName>
                <label>After Undelete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>