apex-trigger-handler/main/default/objects/TriggerHandlerRegistry__mdt/listViews/All_Handlers.listView-meta.xml
<ListView>
    <fullName>All_Handlers</fullName>
    <columns>MasterLabel</columns>
    <columns>SObject__c</columns>
    <columns>TriggerEvent__c</columns>
    <columns>HandlerClass__c</columns>
    <columns>ExecutionOrder__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Handlers</label>
</ListView>